// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`работа кнопки Активные 1`] = `
<div
  className="MobileCompany"
>
  <div
    className="CliensSorting"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <table
    className="MobileCompanyClients"
  >
    <tbody
      className="Answers"
    >
      <tr>
        <td>
          фамилия
        </td>
        <td>
          имя
        </td>
        <td>
          отчество
        </td>
        <td>
          статус
        </td>
        <td>
          баланс
        </td>
        <td>
          редактировать
        </td>
        <td>
          удалить
        </td>
      </tr>
    </tbody>
    <tbody
      className="Answers"
    >
      <tr
        className="MobileClient"
      >
        <td
          className="MobileClientFam"
        >
          Иванов
        </td>
        <td
          className="MobileClientIm"
        >
          Иван
        </td>
        <td
          className="MobileClientOtch"
        >
          Иванович
        </td>
        <td
          className="MobileClientStatus"
        >
          active
        </td>
        <td
          className="MobileClientBalance"
        >
          200
        </td>
        <td
          className="ButtonEdit"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ButtonDelete"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr
        className="MobileClient"
      >
        <td
          className="MobileClientFam"
        >
          Сидоров
        </td>
        <td
          className="MobileClientIm"
        >
          Сидор
        </td>
        <td
          className="MobileClientOtch"
        >
          Сидорович
        </td>
        <td
          className="MobileClientStatus"
        >
          active
        </td>
        <td
          className="MobileClientBalance"
        >
          250
        </td>
        <td
          className="ButtonEdit"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ButtonDelete"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr
        className="MobileClient"
      >
        <td
          className="MobileClientFam"
        >
          Петров
        </td>
        <td
          className="MobileClientIm"
        >
          Пётр
        </td>
        <td
          className="MobileClientOtch"
        >
          Петрович
        </td>
        <td
          className="MobileClientStatus"
        >
          active
        </td>
        <td
          className="MobileClientBalance"
        >
          180
        </td>
        <td
          className="ButtonEdit"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ButtonDelete"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr
        className="MobileClient"
      >
        <td
          className="MobileClientFam"
        >
          Григорьев
        </td>
        <td
          className="MobileClientIm"
        >
          Григорий
        </td>
        <td
          className="MobileClientOtch"
        >
          Григорьевич
        </td>
        <td
          className="MobileClientStatus"
        >
          blocked
        </td>
        <td
          className="MobileClientBalance"
        >
          -220
        </td>
        <td
          className="ButtonEdit"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ButtonDelete"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <div>
    <input
      onClick={[Function]}
      type="button"
      value="Добавить нового клиента"
    />
  </div>
  <div />
  <div />
</div>
`;

exports[`работа кнопки Активные 2`] = `
<div
  className="MobileCompany"
>
  <div
    className="CliensSorting"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <table
    className="MobileCompanyClients"
  >
    <tbody
      className="Answers"
    >
      <tr>
        <td>
          фамилия
        </td>
        <td>
          имя
        </td>
        <td>
          отчество
        </td>
        <td>
          статус
        </td>
        <td>
          баланс
        </td>
        <td>
          редактировать
        </td>
        <td>
          удалить
        </td>
      </tr>
    </tbody>
    <tbody
      className="Answers"
    >
      <tr
        className="MobileClient"
      >
        <td
          className="MobileClientFam"
        >
          Григорьев
        </td>
        <td
          className="MobileClientIm"
        >
          Григорий
        </td>
        <td
          className="MobileClientOtch"
        >
          Григорьевич
        </td>
        <td
          className="MobileClientStatus"
        >
          blocked
        </td>
        <td
          className="MobileClientBalance"
        >
          -220
        </td>
        <td
          className="ButtonEdit"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ButtonDelete"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <div>
    <input
      onClick={[Function]}
      type="button"
      value="Добавить нового клиента"
    />
  </div>
  <div />
  <div />
</div>
`;

exports[`работа кнопки Активные 3`] = `
<div
  className="MobileCompany"
>
  <div
    className="CliensSorting"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <table
    className="MobileCompanyClients"
  >
    <tbody
      className="Answers"
    >
      <tr>
        <td>
          фамилия
        </td>
        <td>
          имя
        </td>
        <td>
          отчество
        </td>
        <td>
          статус
        </td>
        <td>
          баланс
        </td>
        <td>
          редактировать
        </td>
        <td>
          удалить
        </td>
      </tr>
    </tbody>
    <tbody
      className="Answers"
    >
      <tr
        className="MobileClient"
      >
        <td
          className="MobileClientFam"
        >
          Иванов
        </td>
        <td
          className="MobileClientIm"
        >
          Иван
        </td>
        <td
          className="MobileClientOtch"
        >
          Иванович
        </td>
        <td
          className="MobileClientStatus"
        >
          active
        </td>
        <td
          className="MobileClientBalance"
        >
          200
        </td>
        <td
          className="ButtonEdit"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ButtonDelete"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr
        className="MobileClient"
      >
        <td
          className="MobileClientFam"
        >
          Сидоров
        </td>
        <td
          className="MobileClientIm"
        >
          Сидор
        </td>
        <td
          className="MobileClientOtch"
        >
          Сидорович
        </td>
        <td
          className="MobileClientStatus"
        >
          active
        </td>
        <td
          className="MobileClientBalance"
        >
          250
        </td>
        <td
          className="ButtonEdit"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ButtonDelete"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr
        className="MobileClient"
      >
        <td
          className="MobileClientFam"
        >
          Петров
        </td>
        <td
          className="MobileClientIm"
        >
          Пётр
        </td>
        <td
          className="MobileClientOtch"
        >
          Петрович
        </td>
        <td
          className="MobileClientStatus"
        >
          active
        </td>
        <td
          className="MobileClientBalance"
        >
          180
        </td>
        <td
          className="ButtonEdit"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ButtonDelete"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr
        className="MobileClient"
      >
        <td
          className="MobileClientFam"
        >
          Григорьев
        </td>
        <td
          className="MobileClientIm"
        >
          Григорий
        </td>
        <td
          className="MobileClientOtch"
        >
          Григорьевич
        </td>
        <td
          className="MobileClientStatus"
        >
          blocked
        </td>
        <td
          className="MobileClientBalance"
        >
          -220
        </td>
        <td
          className="ButtonEdit"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ButtonDelete"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <div>
    <input
      onClick={[Function]}
      type="button"
      value="Добавить нового клиента"
    />
  </div>
  <div />
  <div />
</div>
`;

exports[`работа кнопки Активные 4`] = `
<div
  className="MobileCompany"
>
  <div
    className="CliensSorting"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <table
    className="MobileCompanyClients"
  >
    <tbody
      className="Answers"
    >
      <tr>
        <td>
          фамилия
        </td>
        <td>
          имя
        </td>
        <td>
          отчество
        </td>
        <td>
          статус
        </td>
        <td>
          баланс
        </td>
        <td>
          редактировать
        </td>
        <td>
          удалить
        </td>
      </tr>
    </tbody>
    <tbody
      className="Answers"
    >
      <tr
        className="MobileClient"
      >
        <td
          className="MobileClientFam"
        >
          Иванов
        </td>
        <td
          className="MobileClientIm"
        >
          Иван
        </td>
        <td
          className="MobileClientOtch"
        >
          Иванович
        </td>
        <td
          className="MobileClientStatus"
        >
          active
        </td>
        <td
          className="MobileClientBalance"
        >
          200
        </td>
        <td
          className="ButtonEdit"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ButtonDelete"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr
        className="MobileClient"
      >
        <td
          className="MobileClientFam"
        >
          Сидоров
        </td>
        <td
          className="MobileClientIm"
        >
          Сидор
        </td>
        <td
          className="MobileClientOtch"
        >
          Сидорович
        </td>
        <td
          className="MobileClientStatus"
        >
          active
        </td>
        <td
          className="MobileClientBalance"
        >
          250
        </td>
        <td
          className="ButtonEdit"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ButtonDelete"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr
        className="MobileClient"
      >
        <td
          className="MobileClientFam"
        >
          Петров
        </td>
        <td
          className="MobileClientIm"
        >
          Пётр
        </td>
        <td
          className="MobileClientOtch"
        >
          Петрович
        </td>
        <td
          className="MobileClientStatus"
        >
          active
        </td>
        <td
          className="MobileClientBalance"
        >
          180
        </td>
        <td
          className="ButtonEdit"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td
          className="ButtonDelete"
        >
           
          <input
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <div>
    <input
      onClick={[Function]}
      type="button"
      value="Добавить нового клиента"
    />
  </div>
  <div />
  <div />
</div>
`;
